@@ -217,6 +217,8 @@ debian-installer (20050630) UNRELEASED; urgency=low
   * rootskel-locale renamed to installation-locale.
   * Move md5sums and udeb.list generation into "release" target of
     build/Makefile and run these as part of the daily build too.
+  * Cleaned up various userdevfs cruft, goes along with a reworked
+    userdevfs udeb.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 12 Aug 2005 11:00:55 -0400
 
